#1: added solution verify warning.